  \itemize{
    \item Bugfix in function preprocessENmix for parallel computing. 
}}
\section{Version 1.1.2}{
  \itemize{
    \item Improve code in function preprocessENmix to use less memory.
}}
\section{Version 1.1.3}{
  \itemize{
    \item Function multifreqpoly was added
}}
\section{Version 1.1.4}{
  \itemize{
    \item Function rm.outlier was added
}}
\section{Version 1.1.5}{
  \itemize{
    \item rm.outlier was modified to have more functionality
}}
\section{Version 1.1.6}{
  \itemize{
    \item Improved code in function multifreqpoly.R and rm.outlier.R
}}
\section{Version 1.1.7}{
  \itemize{
    \item Improved code in function nmode.mc.R
}}
\section{Version 1.1.8}{
  \itemize{
    \item Revised user's guide
}}
\section{Version 1.1.9}{
  \itemize{
    \item Citation information update
}}
\section{Version 1.2.0}{
  \itemize{
    \item Removed function QCfilter 
    \item Heavily modified function QCinfo
    \item Add an argument exSample to preprocessENmix
}}
\section{Version 1.6.0}{
  \itemize{
    \item Improved code for parallel computing
    \item Added a function freqpoly
}}
\section{Version 1.7.3}{
  \itemize{
    \item Bugfix in function rm.outlier
}}
\section{Version 1.7.5}{
  \itemize{
    \item added function rcp for probe type bias correction
}}
\section{Version 1.9.1}{
  \itemize{
    \item added function oxBS.MLE
}}
\section{Version 1.9.2}{
  \itemize{
    \item added function ctrlsva
}}
\section{Version 1.9.3}{
  \itemize{
    \item added function relic
}}
\section{Version 1.9.4}{
  \itemize{
    \item bug fix
}}
\section{Version 1.12.1}{
  \itemize{
    \item bug fix
}}
\section{Version 1.12.1}{
  \itemize{
    \item bug fix
}}
\section{Version 1.13.3}{
  \itemize{
    \item add pipeline function mpreprocess
    \item bug fix
}}
\section{Version 1.13.4}{
  \itemize{
    \item bug fix
}}
\section{Version 1.13.6}{
  \itemize{
    \item corrected User's guide  
}}
\section{Version 1.13.7}{
  \itemize{
    \item updated User's guide
}}
