@@ -1,6 +1,6 @@
 Package: ENmix
-Version: 1.13.8
-Date: 2017-05-17
+Version: 1.13.9
+Date: 2017-08-10
 Title: Data preprocessing and quality control for Illumina
    HumanMethylation450 and MethylationEPIC BeadChip
 Type: Package
